--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
       rel="stylesheet" />
+    <!-- normalize css file -->
+    <link rel="stylesheet" href="./css/normalize.css">
     <!-- font awesome -->
-    <script
-      src="https://kit.fontawesome.com/85514335c8.js"
-      crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/all.css">
+    <!-- all.min.css file for fonts awsome -->
+    <link rel="stylesheet" href="./css/all.min.css">
   </head>
   <body>
     <header>
